# bb-asset-hub

./: README.md  go.sum  go_dependencies.bzl
cmd/bb_asset_hub/: BUILD.bazel  container.bzl  main.go
internal/mock/: BUILD.bazel
patches/com_github_buildbarn_bb_storage/: expose_find_missing_queue.diff
pkg/configuration/: BUILD.bazel  new_fetcher.go
pkg/fetch/: BUILD.bazel  caching_fetcher.go  caching_fetcher_test.go  completeness_checking_fetcher.go  completeness_checking_fetcher_test.go  error_fetcher.go  fetcher.go  http_fetcher.go  http_fetcher_test.go  logging_fetcher.go  validating_fetcher.go  validating_fetcher_test.go
pkg/proto/asset/: BUILD.bazel  asset.proto
pkg/proto/configuration/bb_asset_hub/fetch/: fetcher.proto
pkg/push/: BUILD.bazel  logging_pusher.go
pkg/qualifier/: BUILD.bazel  qualifier_set.go
pkg/storage/: BUILD.bazel  asset_reference.go
tools/: workspace-status.sh
